--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
   font-family: "MyFont", sans-serif;
 }
 
+h1{
+  font-size: xx-large;
+}
+
 body {
   min-height: 100vh;
   background-image: url(./assets/background.png);
@@ -306,13 +310,16 @@ button {
   margin: 0 auto;
   display: block;
   margin-bottom: 2rem;
+  margin-bottom: 150px;
 }
 
 .cersei {
   position: absolute;
   left: 1.6rem;
-  top: 1.6rem;
-  width: 165px;
+  top: 1.2rem;
+  width: 175px;
+  margin-bottom: 0;
+
 }
 
 .jaime {
@@ -355,6 +362,14 @@ button {
   width: 100%;
   padding: 1rem;
   text-decoration: underline;
+}
+
+.intro-game {
+  text-align: left;
+  width: 100%;
+  padding: 1rem;
+  font-weight: bold;
+  font-size: large;
 }
 
 @media (max-width: 768px) {
@@ -549,3 +564,4 @@ button {
     font-size: 1.25rem;
   }
 }
+/* #got-music { display: none } */
