--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section {
 .container {
   width: 100%;
   padding: 1rem;
-  gap: 1rem;
+  gap: 0.8 rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -122,11 +122,15 @@ section {
 .edit-container {
   background-image: url(./assets/background.png);
   padding: 1rem;
+  margin: 25px;
   text-align: justify;
   text-justify: inter-word;
   position: relative;
   max-width: 750px;
   width: 100%;
+  box-shadow: 30px 30px 20px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+  border: 2px solid #907b61;
 }
 
 .madLibsEdit {
@@ -163,6 +167,7 @@ section {
 
 .preview-container {
   text-align: justify;
+  margin: 25px;
   text-justify: inter-word;
   background-image: url(./assets/background.png);
   padding: 1rem;
@@ -171,6 +176,9 @@ section {
   position: relative;
   max-width: 750px;
   width: 100%;
+  box-shadow: 30px 30px 20px rgba(0, 0, 0, 0.25);
+  transition: 0.3s;
+  border: 2px solid #907b61;
 }
 
 .top-left {
@@ -197,9 +205,9 @@ section {
   right: 0;
 }
 
-.got-logo {
+.main-logo {
   width: 450px;
-  margin: 20px;
+  margin: 15px;
 }
 
 .red-logo {
@@ -208,10 +216,10 @@ section {
 }
 
 .intro {
-  font-size: 2.25rem;
+  font-size: 1.7rem;
   font-weight: 600;
   text-align: center;
-  padding: 1rem;
+  padding: 0.1rem;
 }
 
 .cast-container {
@@ -355,6 +363,8 @@ button {
   width: 100%;
   padding: 1rem;
   text-decoration: underline;
+  margin-top: 70px;
+  align-items: calc();
 }
 
 @media (max-width: 768px) {
@@ -367,8 +377,8 @@ button {
     width: 100px;
   }
 
-  .got-logo {
-    width: 300px;
+  .main-logo {
+    width: 200px;
   }
 
   .intro {
@@ -458,12 +468,13 @@ button {
     width: 75px;
   }
 
-  .got-logo {
-    width: 200px;
+  .main-logo {
+    width: 500px;
+    position: center;
   }
 
   .intro {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 
   .cast-container {
